syntax = "proto3";
package flare;

import "flare-common.proto";

service FlareMetadataRaft {
  rpc Vote(ByteWrapper) returns (ByteWrapper);
  rpc Snapshot(ByteWrapper) returns (ByteWrapper);
  rpc Append(ByteWrapper) returns (ByteWrapper);
}


service FlareControl {
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Leave(LeaveRequest) returns (LeaveResponse);
  rpc GetTopology(ClusterTopologyRequest) returns (ClusterTopologyInfo);
  rpc GetMetadata(ClusterMetadataRequest) returns (ClusterMetadata);
}

message ByteWrapper {
  bytes data = 1;
}

message JoinRequest {
  uint64 node_id = 1;
  string addr = 2;
}

message JoinResponse {
}


message LeaveRequest {
  uint64 node_id = 1;
}

message LeaveResponse {
}



message ClusterTopologyRequest {
}

message ClusterTopologyInfo {
  map<uint64, string> node_addr = 1;
  map<int64, ShardTopologyInfo> shards = 2;
}

message ShardTopologyInfo {
  uint64 leader = 1;
  repeated uint64 voters = 2;
  repeated uint64 learners = 3;
}

message ClusterMetadataRequest {

}

message ClusterMetadata {
  map<string, CollectionMetadata> collections = 1;
  map<uint64, ShardMetadata> shards = 2;
}
